--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-native-maps": "^0.12.2",
     "react-native-router-flux": "^3.37.0",
     "react-native-side-menu": "^0.20.1",
-    "react-native-tabs": "^1.0.9"
+    "react-native-tabs": "^1.0.9",
+    "realm": "^1.1.1"
   },
   "jest": {
     "preset": "react-native"
